# voxel

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  rdoc.sh
.claude/: .gitignore  .permissions  .workflow-version  settings.json
.claude/agents/: debug.md  edit.major.md  edit.md  edit.minor.md  explore.md  research.md  review.correctness.md  review.md  review.verify.md
.claude/context/: README.md  docs-style.md  docs.md  rust.md
.claude/hooks/: agent-isolate.sh  agent-worktree.sh  auto-permissions.sh  check-workflow-version.sh  match_command.py  sandboxed-python.sh
.claude/skills/commit/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/pr/: SKILL.md
crates/game/: Cargo.toml
crates/game/src/: main.rs  validation.rs  world.rs  world_view.rs
crates/game/src/world/: coord.rs  divergence.rs  lod.rs  material_data_pool.rs  material_pool.rs  pool.rs  residency.rs  shell.rs  slot_directory.rs  state_history.rs  subchunk.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/shaders/: present_blit.ps.hlsl  (+8 more)
crates/scaffold/: Cargo.toml  build.rs
crates/scaffold/src/: build.rs  camera.rs  chunk_manager.rs  cull.rs  gpu_alloc.rs  main.rs  multi_buffer.rs  timestamp.rs  world.rs
crates/scaffold/src/shaders/: build.wgsl  build_alloc.cs.hlsl  build_count.cs.hlsl  build_write.cs.hlsl  cull.cs.hlsl  cull.wgsl  material_pack.cs.hlsl  voxel.ps.hlsl  voxel.vs.hlsl  voxel.wgsl
crates/scaffold/src/shaders/include/: bindings.hlsl  culling.hlsl  face.hlsl  material.hlsl  merge.hlsl  quad.hlsl  shading.hlsl
crates/scaffold/src/worldgen/: asteroid.rs  mod.rs  surface.rs
crates/voxel/: Cargo.toml
docs/: design_rejections.md  directional_face_acceleration.md  directional_face_computational_analysis.md  gpu_memory_architecture.md  isosurface_dda.md  references.md  render_pipeline_analysis.md  render_pipeline_v2.md  renderer_rewrite_principles.md  scaffold_rewrite_principles.md  scene_acceleration.md  voxel_global_illumination.md  world_streaming.md
docs/archive/: directional_face_computational_analysis.md  greedy_quad_pipeline.md  rejected_acceleration_structures.md  rejected_rendering_approaches.md
docs/future/: compute_clipmap_ray_march.md  scene_acceleration.md  voxel_global_illumination.md
src/: block.rs  chunk.rs  lib.rs  morton.rs  storage.rs  world.rs
src/render/: direction.rs  face.rs
src/storage/: dense.rs  palette.rs
(+60 files in other folders)
