[workspace]
resolver = "3"
members = ["crates/voxel", "crates/renderer", "crates/game"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
eden-math = { path = "../eden/eden-engine/lib/eden-math", default-features = false }
renderer  = { path = "crates/renderer" }
thiserror = "1"
wgpu      = { version = "29", default-features = false, features = ["wgsl", "spirv", "vulkan"] }
bytemuck  = { version = "1", features = ["derive"] }
pollster  = "0.4.0"
rspirv    = "0.13"
winit     = "0.30"

[profile.dev.package."*"]
opt-level = 2
