[package]
name = "scaffold"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck   = { version = "1", features = ["derive"] }
eden-math  = { path = "../../../eden/eden-engine/lib/eden-math", default-features = false }
egui       = "0.34"
egui-wgpu  = "0.34"
egui-winit = "0.34"
glam       = "0.29"
noise      = "0.9"
pollster   = "0.4.0"
rayon      = "1"
voxel      = { path = "../.." }
wgpu       = "29.0.1"
winit      = "0.30.13"
